--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -20,6 +20,8 @@
 
     .notification{
         position: relative;
+        padding-right: 10px;
+        
         span{
             background-color: red;
             color:white;
@@ -27,7 +29,7 @@
             height:16px;
             border-radius: 50%;
             top:-10px;
-            right:-10px;
+            right:-5px;
             position: absolute;
             display: flex;
             align-items: center;
@@ -39,7 +41,7 @@
     .user{
         display: flex;
         align-items: center;
-        gap:20px;
+        gap:5px;
 
         img{
             width:26px;
