--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -11,6 +11,7 @@
             font-size:12px;
             font-weight:500;
             color:  $soft-color;
+            text-transform: uppercase;
         }
 
         .listItem{
