--- a/src/components/chartbox/chartbox.scss
+++ b/src/components/chartbox/chartbox.scss
@@ -1,3 +1,48 @@
+@import "../../styles/variables.scss";
+
 .chartbox{
+ display: flex;
+height:100%;
+ .boxInfo{
+    flex:3;
+    display: flex;
+    flex-direction:  column;
+    justify-content: space-between;
+
+    .title{
+        display: flex;
+        align-items: center;
+        gap:10px;
+     }
+    }
+
+
+    .chartInfo{
+        flex:2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        .chart{
+            height:100%;
+            
+        }
+
+        .texts{
+            display: flex;
+            flex-direction: column;
+          text-align-last: right;
+          
+          .percentage{
+            font-weight: bold;
+            font-size:20px;
+          }
+
+          .month{
+ font-size: 14px;
+          }
+        }
+    }
+
 
 }
