--- a/src/components/piechart/piechart.scss
+++ b/src/components/piechart/piechart.scss
@@ -1,6 +1,47 @@
 .piechart{
+    height:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
     .piechartbox{
-     
-      
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height:100%;
+    }
+
+    
+    .options{
+        display: flex;
+        justify-content: space-between;
+        gap:10px;
+        font-size:14px;
+ 
+
+       .option{
+        display: flex;
+        gap:10px;
+
+        .title{
+        display: flex;
+         flex-direction: column;
+         gap:10px;
+        
+        .dot{
+            width:10px;
+            height:10px;
+            border-radius: 50%; 
+            position: absolute;
+        }
+
+        .optiontitle{
+            padding-top: -20px;
+            padding-left:20px;
+        }
+
+        }
+       }
     }
 }
