--- a/src/components/dataTable/datatable.scss
+++ b/src/components/dataTable/datatable.scss
@@ -17,4 +17,15 @@
         object-fit: cover;
         border-radius: 50%;
     }
+
+    .action{
+        display: flex;
+        gap:15px;
+
+        img{
+            width:20px;
+            height: 20px;
+            cursor: pointer;
+        }
+    }
 }
