--- a/src/pages/users/users.scss
+++ b/src/pages/users/users.scss
@@ -2,5 +2,20 @@
 
 
 .users{
+
+   .info{
+    display: flex;
+    align-items: center;
+    gap:20px;
+    margin-bottom: 20px;
    
+
+    button{
+        padding:10px;
+        cursor: pointer;
+        }
+
+    }
 }
+
+
