--- a/src/pages/products/products.scss
+++ b/src/pages/products/products.scss
@@ -1,3 +1,13 @@
 .products{
-    background-color: red;
+
+    .info{
+        display: flex;
+        gap:20px;
+
+
+        button{
+            width:200px;
+        }
+
+    }
 }
