--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./responsive.scss";
 
 * {
   margin: 0;
@@ -89,6 +90,7 @@ select {
 
 body{
   min-height:100%;
+  background-color: $main-bg;
 }
 
 .main{
@@ -108,10 +110,18 @@ body{
   width:250px;
   padding: 5px 20px;
   border-right:2px solid $soft-bg;
+
+  @include lg{
+    width:max-content;
+}
+
+
+
 }
 
 .contentContainer{
   padding: 5px 20px;
-  width:100%;
+  width:100vw;
+
 
 }
