--- a/src/components/bigchartbox/bigchartbox.scss
+++ b/src/components/bigchartbox/bigchartbox.scss
@@ -1,13 +1,22 @@
-.bigchartbox{
-    width:100%;
-    height:100%;
+@import "../../styles/responsive.scss";
+
+.bigchartbox {
+    width: 100%;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-    .chart{
-        width:100%;
-        height:300px;
+
+    h1 {
+        @include xxl {
+            font-size: 24px;
+        }
+    }
+
+    .chart {
+        width: 100%;
+        height: 300px;
     }
 }
