--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -1,29 +1,51 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 
-.menu{
-    .item{
+.menu {
+    .item {
         display: flex;
         flex-direction: column;
-        gap:10px;
-        margin-bottom:20px;
+        gap: 10px;
+        margin-bottom: 20px;
 
-        .title{
-            font-size:12px;
-            font-weight:500;
-            color:  $soft-color;
+
+
+
+        .title {
+            font-size: 12px;
+            font-weight: 500;
+            color: $soft-color;
             text-transform: uppercase;
+
         }
 
-        .listItem{
+        .listItem {
             display: flex;
-            gap:10px;
-            padding:10px;
+            gap: 10px;
+            padding: 10px;
             border-radius: 5px;
-        
-            &:hover{
+       
+
+            &:hover {
                 background-color: $soft-bg;
-                width:100%;                
+                width: 100%;
             }
+
+            span {
+                @include lg {
+                    display: none;
+                }
+            }
+
         }
+
+    }
+}
+
+
+.listItem, .title{
+    @include lg {
+        justify-content: center;
+       text-align: center;
     }
 }
