--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 
 .home{
     display:grid;
@@ -6,12 +7,29 @@
     grid-template-columns: repeat(4,1fr);
     grid-auto-rows: minmax(180px, auto);
 
+    grid-auto-flow: 10;
     .box{
         padding:20px;
         border-radius:10px;
         border: 2px solid $soft-bg;
     }
+    @include xl{
+        grid-template-columns: repeat(3,1fr);
+    }
+    @include lg{
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+    @include md{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    @include sm{
+        grid-auto-rows: minmax(120px,auto);
+    }
 }
+
+
 
 //aún si se cambia estos valores, solo afecta el elemento único, pero no afecta las demás columnas
 
@@ -28,5 +46,9 @@
 .box7{
     grid-column:span 2;
     grid-row: span 2;
+
+    @include md{
+       display: none;
+    }
 }
 
